select activity sidebar

--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -30,7 +30,7 @@
         .modal-backdrop {
             display: none;
         }
-        .modal-cotent {
+        .modal-content {
             z-index: 5000 !important;
         }
     </style>
