made date readable on Homepage

--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -182,6 +182,9 @@
     <!-- Vue.js Version 3 CDN -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
+    <!-- Flatpickr JS -->
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
     <!-- Refer to my own external JS -->
     <script type="module" src="homepageNavBar.js"></script>
 
