Fixed sidebar issue

--- a/templates/select_activities_page/select_activities_page.html
+++ b/templates/select_activities_page/select_activities_page.html
@@ -30,9 +30,6 @@
         .modal-backdrop {
             display: none;
         }
-        .modal-content {
-            z-index: 5000 !important;
-        }
     </style>
     <title>Select Activities Page</title>
 </head>
@@ -170,7 +167,7 @@
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="ModalLabel">Proceeding to next phase</h1>
+                                <h1 class="modal-title fs-5" id="confirm_next_phase_modal_label1">Proceeding to next phase</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body">
